--- a/2022-10-02-Bootstrap_startup website/index.html
+++ b/2022-10-02-Bootstrap_startup website/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>Hiba Clothing</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,19 +14,26 @@
   <section id="title">
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
 
-      <a class="navbar-brand" href="">Uroosa Clothing</a>
+      <a class="navbar-brand" href="">Hiba Clothing</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ml-auto">
-          <li clas=nav-item>
+          <li class="nav-item">
             <a class="nav-link" href="">Contact</a>
-          <li clas=nav-item>
-            <a class="nav-link" href="">Shop by Category</a>
-          <li clas=nav-item>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Shop by Category
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Fancy</a></li>
+              <li><a class="dropdown-item" href="#">Classic</a></li>
+              <li><a class="dropdown-item" href="#">Kids</a></li>
+            </ul>
+          <li class="nav-item">
             <a class="nav-link" href="">About us</a>
           </li>
         </ul>
