--- a/2022-10-02-Bootstrap_startup website/index.html
+++ b/2022-10-02-Bootstrap_startup website/index.html
@@ -6,10 +6,20 @@
   <title>Hiba Clothing</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap Scripts -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- CSS style Sheet -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Font Awesome  -->
+  <script src="https://kit.fontawesome.com/45d574a7cb.js" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -53,8 +63,8 @@
 
         <div class="col-lg-6 ">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark" >Download</button>
-          <button type="button" class="btn btn-outline-light">Download</button>
+          <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
           <img src="images/iphone6.png" alt="iphone-mockup">
