style the last 2 section. footer and cta section

--- a/2022-10-02-Bootstrap_startup website/index.html
+++ b/2022-10-02-Bootstrap_startup website/index.html
@@ -20,7 +20,6 @@
   <!-- Font Awesome  -->
   <script src="https://kit.fontawesome.com/45d574a7cb.js" crossorigin="anonymous"></script>
 
-
 </head>
 
 <body>
@@ -221,9 +220,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading" >Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
@@ -232,6 +231,10 @@
 
   <footer id="footer">
 
+    <i class=" social-icon fa-brands fa-facebook"></i>
+    <i class=" social-icon fa-brands fa-instagram"></i>
+    <i class=" social-icon fa-brands fa-twitter"></i>
+    <i class=" social-icon fa-brands fa-facebook"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
