add interpage links

--- a/2022-10-02-Bootstrap_startup website/index.html
+++ b/2022-10-02-Bootstrap_startup website/index.html
@@ -36,18 +36,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Shop by Category
+                Learn More
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Fancy</a></li>
-                <li><a class="dropdown-item" href="#">Classic</a></li>
-                <li><a class="dropdown-item" href="#">Kids</a></li>
+                <li><a class="dropdown-item" href="#pricing">Pricing</a></li>
+                <li><a class="dropdown-item" href="#testimonials">Testimonials</a></li>
+                <li><a class="dropdown-item" href="#features">Features</a></li>
               </ul>
             <li class="nav-item">
-              <a class="nav-link" href="">About us</a>
+              <a class="nav-link" href="#cta">About us</a>
             </li>
           </ul>
         </div>
