--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
 
-    <h1>Hello</h1>
+    <h1 id="title" >Hello</h1>
 
     <input type="checkbox">
 
-    <button style=":active color:red;">Click Me</button>
+    <button class = "btn" style=":active color:red;">Click Me</button>
 
     <ul>
       <li class="list">
