add link to 1st project

--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -32,7 +32,7 @@
           experienced professionals in the industry. Moreover, I am interested
           in exploring new technologies and developments in the field, and I am
           excited about the opportunity to work on innovative projects that make
-          a positive impact on the world..</p>
+          a positive impact on the world.</p>
         </div>
       </header>
 
@@ -48,14 +48,16 @@
         </p>
 
         <!-- Copy the whole <section> block to add more projects. -->
-        <section>
-          <h3>Project Name</h3>
-          <img src="images/thumbnail-1.jpg" alt="description of image" />
+        <section class="project-item">
+          <img src="images/Tindog.png" alt="Tindog" />
           <p>
-            Summary or description of the project and/or your role in it. Add as
-            many paragraphs as you need.
+          <h3>Tindog</h3>
+
+          Website is designed with <b>Bootstrap</b>, a powerful framework that provides a responsive
+           and user-friendly experience on any device. Feel free to test out our website on any
+            device and rate the responsiveness and user-friendly experience for yourself
           </p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
+          <a class="btn" href="tindog/index.html" target="_blank">View the website</a>
         </section>
       </div>
         <!-- End of Project block. -->
