flexbox alignment for footer

--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -16,23 +16,17 @@
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
         <div class="content-wrap">
-        <h1>Hamza Tanveer</h1>
-        <h2>Software Developer | Test Automation Engineer | Test Engineer</h2>
+        <h1>I am Hamza</h1>
+        <h2>A <u>Pro</u>grammer. </h2>
 
-        <p>
-          As a recent Computer Science graduate, I am excited to explore
-          opportunities as a software developer and connect with experienced
-          professionals in the field. My coursework, as well as self-directed
-          learning, has provided me with strong foundations in programming
-          languages such as Python, C++, and JavaScript. Additionally, I have
-          gained experience in software development principles and methodologies
-          through various coursework projects and side projects. 
-        </p>
-        <p>I am eager to apply my skills in a real-world setting and continue learning from
-          experienced professionals in the industry. Moreover, I am interested
-          in exploring new technologies and developments in the field, and I am
-          excited about the opportunity to work on innovative projects that make
-          a positive impact on the world.</p>
+        <p>As a versatile IT professional with a passion for software development, 
+          test engineering, and support roles, I bring significant experience in all 
+          three of these fields. I am eager to explore opportunities in any of these 
+          areas and am open to whichever direction my career path takes me. I am 
+          constantly seeking to learn and grow as an IT professional. Additionally, 
+          I am interested in exploring new technologies and innovative projects 
+          that make a positive impact on the world. Let's connect and explore 
+          how we can collaborate to bring meaningful solutions to your organization.</p>
         </div>
       </header>
 
@@ -41,10 +35,7 @@
         <div class="content-wrap">
         <h2>Featured Projects</h2>
         <p>
-          View selected projects below. More information can be found at
-          <a " href="http://christinatruong.com"
-            >christina .com</a
-          >.
+          View selected projects below.
         </p>
 
         <!-- Copy the whole <section> block to add more projects. -->
@@ -137,15 +128,13 @@
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
-        <ul>
-          <li><a href="mailto:email@example.com">email@example.com</a></li>
+        <ul class="contact-list">
+          <li><a href="hxtanveer@shockers.wichita.edu">hxtanveer@shockers.wichita.edu</a></li>
           <li>
-            <a href="http://yourwebsite.com" target="_blank">your website.com</a>
+            <a href="https://hamza10vr.github.io/cv/" target="_black">My Website</a>
           </li>
-          <li><a href="#" target="_blank">Twitter</a></li>
-          <li><a href="#" target="_blank">LinkedIn</a></li>
-          <li><a href="#" target="_blank">Facebook</a></li>
-        </ul>
+          <li><a href="https://linkedin.com/in/hamza10vr" target="_blank">LinkedIn</a></li>
+       </ul>
         </div>  
       </footer>
     </main>
