add grid colums and gap in work experience section

--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -65,31 +65,41 @@
         </p>
 
         <!-- Copy this whole <section> block to add more jobs. -->
-        <section>
-          <h3>Test Engineer | Test Automation Engineer</h3>
-          <p>NetApp</p>
-          <p>Feb 2022 - Present</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Developed and maintained automated test scripts using Python and REST API,
-               resulting in a significant reduction in manual testing effort and faster
-                product releases..</li>
-            <li>Collaborated with cross-functional teams, including product management,
-               development, and support, to identify and resolve issues throughout the product
-               life cycle.</li>
-            <li>Mentored junior team members, providing guidance on testing best practices,
-               automation techniques, and professional development.</li>
-            <li>Responsible for...</li>
-          </ul>
+        <section class="job-item">
+          <div class="job-details">
+            <h3>Test Engineer | Test Automation Engineer</h3>
+            <p>NetApp</p>
+            <p>Feb 2022 - Present</p>
+
+          </div>
+          
+          <div class="job-summary">
+            <ul>
+              <li>Developed and maintained automated test scripts using Python and REST API,
+                 resulting in a significant reduction in manual testing effort and faster
+                  product releases..</li>
+              <li>Collaborated with cross-functional teams, including product management,
+                 development, and support, to identify and resolve issues throughout the product
+                 life cycle.</li>
+              <li>Mentored junior team members, providing guidance on testing best practices,
+                 automation techniques, and professional development.</li>
+              <li>Responsible for...</li>
+            </ul>
+
+          </div>
+
+
         </section>
 
-        <section>
+        <section class="job-item">
+          <div class="job-details">
           <h3>Quality Assurance Engineer</h3>
           <p>NetApp</p>
           <p>Aug 2020 - Jan 2022</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
+
+          </div>
+
+          <div class="job-summary">
           <ul>
             <li>Configured and tested NetApp storage systems using various operating systems,
                including Linux, Windows, and VMware, to ensure compatibility and functionality.</li>
@@ -100,6 +110,8 @@
                that product quality was maintained across different versions.</li>
             <li>Responsible for...</li>
           </ul>
+
+          </div>
         </section>
         <!-- End of Job block. -->
         </div> <!--- content wrapper div-->
