--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -56,7 +56,7 @@
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work-experience">
-        <div class="content-wrap">
+        <div class="content-wrap item-details">
 
         <h2>Work Experience</h2>
         <p>
@@ -119,7 +119,7 @@
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="education">
-        <div class="content-wrap">
+        <div class="content-wrap item-details">
 
         <h2>Education</h2>
 
