--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -32,7 +32,7 @@
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section class="projects">
-        <div class="content-wrap">
+        <div class="content-wrap divider">
         <h2>Featured Projects</h2>
         <p>
           View selected projects below.
@@ -56,7 +56,7 @@
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work-experience">
-        <div class="content-wrap item-details">
+        <div class="content-wrap item-details divider">
 
         <h2>Work Experience</h2>
         <p>
