add max-width and width to % to make it a RWD

--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -67,7 +67,7 @@
         <!-- Copy this whole <section> block to add more jobs. -->
         <section class="job-item">
           <div class="job-details">
-            <h3>Test Engineer | Test Automation Engineer</h3>
+            <h3>Test Engineer</h3>
             <p>NetApp</p>
             <p>Feb 2022 - Present</p>
 
@@ -83,7 +83,6 @@
                  life cycle.</li>
               <li>Mentored junior team members, providing guidance on testing best practices,
                  automation techniques, and professional development.</li>
-              <li>Responsible for...</li>
             </ul>
 
           </div>
@@ -108,7 +107,6 @@
                 to resolve them.</li>
             <li>Conducted regression testing for software releases and patches, ensuring
                that product quality was maintained across different versions.</li>
-            <li>Responsible for...</li>
           </ul>
 
           </div>
