add flexible background image to education section

--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -124,7 +124,8 @@
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
           <h3>Wichita State University - Wichita, KS</h3>
-          <p>Bachelor of Science in Computer Science, Minor in Mathematics, 2017 - 2022</p>
+          <p>BSc in Computer Science with a Minor in Mathematics</p>
+          <p>2017 - 2022</p>
           <p>Magna Cum Laude Distinction.</p>
         </section>
         </div>
