add more work experience and more responsive

--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -16,7 +16,7 @@
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
         <div class="content-wrap">
-        <h1>I am Hamza</h1>
+        <h1>Hamza Tanveer</h1>
         <h2>A <u>Pro</u>grammer. </h2>
 
         <p>As a versatile IT professional with a passion for software development, 
@@ -111,6 +111,60 @@
 
           </div>
         </section>
+
+
+
+        <section class="job-item">
+          <div class="job-details">
+          <h3>Technical Support Specialistr</h3>
+          <p>ADT Security Services</p>
+          <p>July 2020 - Jun 2021</p>
+
+          </div>
+
+          <div class="job-summary">
+          <ul>
+            <li>Demonstrated expertise in ADT's products and services, including security panels, cameras, and home automation devices,
+              and effectively communicated technical information to non-technical customers.</li>
+            <li>Collaborated with field technicians and other cross-functional teams to diagnose and resolve complex issues, ensuring
+              prompt and satisfactory resolution of customer problems.</li>
+            <li>Utilized ticketing and CRM systems to document customer interactions and follow up on open issues, ensuring timely
+              resolution of customer inquiries.</li>
+          </ul>
+
+          </div>
+        </section>
+
+
+
+
+
+        <section class="job-item">
+          <div class="job-details">
+          <h3>IT Specialist</h3>
+          <p>NetApp</p>
+          <p>Aug 2018 - Sep 2020</p>
+
+          </div>
+
+          <div class="job-summary">
+          <ul>
+            <li>Responsible for swiftly transitioning to an online synchronous educational delivery system in face of COVID-19, by
+              researching, integrating, and educating staff on best practices and technologies such as GSuite, Zoom, Microsoft Office 365,
+              and more.</li>
+            <li>Managed technology solutions for a school of 150+ students and 20+ staff, resulting in a 30% increase in system efficiency
+              and productivity. Demonstrated expertise in technology management and solution delivery to meet evolving needs of
+              students, staff, and stakeholders.</li>
+          </ul>
+
+          </div>
+        </section>
+
+
+
+
+
+
         <!-- End of Job block. -->
         </div> <!--- content wrapper div-->
       </section>
