--- a/My_Website/index2.html
+++ b/My_Website/index2.html
@@ -17,7 +17,7 @@
       <header>
         <div class="content-wrap">
         <h1>Hamza Tanveer</h1>
-        <h2>A <u>Pro</u>grammer. </h2>
+        <img src="images/Hamza_profile_pic.png" >
 
         <p>As a versatile IT professional with a passion for software development, 
           test engineering, and support roles, I bring significant experience in all 
@@ -194,7 +194,7 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <ul class="contact-list">
-          <li><a href="hxtanveer@shockers.wichita.edu">hxtanveer@shockers.wichita.edu</a></li>
+          <li><a href="h.tanveer.tech@gmail.com">h.tanveer.tech@gmail.com</a></li>
           <li>
             <a href="https://hamza10vr.github.io/cv/" target="_black">My Website</a>
           </li>
