--- a/2023-03-02_Calculator/calc.html
+++ b/2023-03-02_Calculator/calc.html
@@ -6,30 +6,30 @@
   </head>
   <body>
     <div id="main">
-      <form name="f">
-        <input type="text" name="ddd" value="">
+      <form name="form">
+        <input type="text" name="calc_screen" value="">
         <br />
-        <input type="button" value="1" onclick="f.ddd.value+=1">
-        <input type="button" value="2" onclick="f.ddd.value+=2">
-        <input type="button" value="3" onclick="f.ddd.value+=3">
-        <input type="button" value="+" onclick="f.ddd.value+='+'">
+        <input type="button" value="1" onclick="form.calc_screen.value+=1">
+        <input type="button" value="2" onclick="form.calc_screen.value+=2">
+        <input type="button" value="3" onclick="form.calc_screen.value+=3">
+        <input type="button" value="+" onclick="form.calc_screen.value+='+'">
 
         <br />
-        <input type="button" value="4" onclick="f.ddd.value+=4">
-        <input type="button" value="5" onclick="f.ddd.value+=5">
-        <input type="button" value="6" onclick="f.ddd.value+=6">
-        <input type="button" value="-" onclick="f.ddd.value+='-'">
+        <input type="button" value="4" onclick="form.calc_screen.value+=4">
+        <input type="button" value="5" onclick="form.calc_screen.value+=5">
+        <input type="button" value="6" onclick="form.calc_screen.value+=6">
+        <input type="button" value="-" onclick="form.calc_screen.value+='-'">
         <br />
-        <input type="button" value="7" onclick="f.ddd.value+=7">
-        <input type="button" value="8" onclick="f.ddd.value+=8">
-        <input type="button" value="9" onclick="f.ddd.value+=9">
-        <input type="button" value="/" onclick="f.ddd.value+='/'">
+        <input type="button" value="7" onclick="form.calc_screen.value+=7">
+        <input type="button" value="8" onclick="form.calc_screen.value+=8">
+        <input type="button" value="9" onclick="form.calc_screen.value+=9">
+        <input type="button" value="/" onclick="form.calc_screen.value+='/'">
 
         <br />
-        <input type="button" value="C" onclick="f.ddd.value=''">
-        <input type="button" value="0" onclick="f.ddd.value+=0">
-        <input type="button" value="=" onclick="f.ddd.value+=1">
-        <input type="button" value="x" onclick="f.ddd.value+='*'">
+        <input type="button" value="C" onclick="form.calc_screen.value=''">
+        <input type="button" value="0" onclick="form.calc_screen.value+=0">
+        <input type="button" value="=" onclick="form.calc_screen.value=eval(form.calc_screen.value)">
+        <input type="button" value="x" onclick="form.calc_screen.value+='*'">
 
       </form>
 
