--- a/2023-03-02_Calculator/calc.html
+++ b/2023-03-02_Calculator/calc.html
@@ -7,7 +7,7 @@
   <body>
     <div id="main">
       <form name="form">
-        <input type="text" name="calc_screen" value="">
+        <input type="text" name="calc_screen" placeholder="0">
         <br />
         <input type="button" value="1" onclick="form.calc_screen.value+=1">
         <input type="button" value="2" onclick="form.calc_screen.value+=2">
