add design to basic calculator

--- a/2023-03-02_Calculator/calc.html
+++ b/2023-03-02_Calculator/calc.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="calc_styles.css">
   </head>
   <body>
-    <div id="main">
+    <div class="main">
       <form name="form">
         <input type="text" name="calc_screen" placeholder="0">
         <br />
