add h1 and css for it

--- a/2023-03-02_Calculator/calc.html
+++ b/2023-03-02_Calculator/calc.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="calc_styles.css">
   </head>
   <body>
+    <h1>Calculator</h1>
     <div class="main">
       <form name="form">
         <input type="text" name="calc_screen" placeholder="0">
