implement onsubmit and add task to the list

--- a/2023-03-03_todo_list/index.html
+++ b/2023-03-03_todo_list/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>TO DO LIST</title>
   </head>
   <body>
-<form id="Form" action="#" >
-  <div class="input-container">
-    <label for="">What needs to be done</label>
-    <input type="text" class="input" id="input" placeholder="Enter your task">
-  </div>
-  <ul>
-    <li>Task 01</li>
-    <li>Task 02</li>
-  </ul>
+    <form id="Form" action="#">
+      <div class="input-container">
+        <label for="">What needs to be done</label>
+        <input
+          type="text"
+          class="input"
+          id="Input"
+          placeholder="Enter your task"
+        />
+      </div>
+      <ul class="task-list" id="Task_list">
+        <li>Task 01</li>
+        <li>Task 02</li>
+      </ul>
 
-  <div class="test"></div>
+      <div class="test"></div>
+    </form>
 
-</form>
-
-  <script type="task.js">
-
-  </script>
+    <script src="task.js"></script>
   </body>
 </html>
