--- a/2023-03-03_todo_list/index.html
+++ b/2023-03-03_todo_list/index.html
@@ -20,10 +20,7 @@
           placeholder="Enter your task"
         />
       </div>
-      <ul class="task-list" id="Task_list">
-        <li>Task 01</li>
-        <li>Task 02</li>
-      </ul>
+      <ul class="task-list" id="Task_list"></ul>
 
       <div class="test"></div>
     </form>
